Unify latex export script.

--- a/export_tex_data_tables.ipynb
+++ b/export_tex_data_tables.ipynb
@@ -7,9 +7,11 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import os\n",
     "from pylatex import Document, Section, Subsection, Command, Tabular\n",
     "from pylatex.utils import italic, NoEscape\n",
-    "from at2019dsg.data import bran_disc, t_peak_mjd, photometry_data, radio_data, radio_qs_epochs, xray_data"
+    "from at2019dsg.data import bran_disc, t_peak_mjd, photometry_data, radio_data, radio_qs_epochs, xray_data, radio_rec, data_dir\n",
+    "import astropy.io.ascii"
    ]
   },
   {
@@ -920,11 +922,189 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "make table with equiparition fitting results\n",
+    "and\n",
+    "table with all the radio data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "    42&   8.49&0.290&0.032&VLA      \\\\\n",
+      "    42&   9.51&0.408&0.035&VLA      \\\\\n",
+      "    42&  10.49&0.440&0.036&VLA      \\\\\n",
+      "    42&  11.51&0.412&0.037&VLA      \\\\\n",
+      "    41&  15.50&0.464&0.045&AMI      \\\\\n",
+      "\\hline\n",
+      "    70&   1.40&0.104&0.018&MeerKAT  \\\\\n",
+      "    70&   3.50&0.103&0.028&VLA      \\\\\n",
+      "    70&   4.49&0.319&0.040&VLA      \\\\\n",
+      "    70&   5.51&0.324&0.033&VLA      \\\\\n",
+      "    70&   6.49&0.443&0.037&VLA      \\\\\n",
+      "    70&   7.51&0.558&0.041&VLA      \\\\\n",
+      "    70&   8.49&0.680&0.045&VLA      \\\\\n",
+      "    70&   9.51&0.730&0.047&VLA      \\\\\n",
+      "    70&  10.49&0.756&0.048&VLA      \\\\\n",
+      "    70&  11.51&0.771&0.051&VLA      \\\\\n",
+      "    71&  15.50&0.730&0.076&AMI      \\\\\n",
+      "\\hline\n",
+      "   111&   1.40&0.111&0.017&MeerKAT  \\\\\n",
+      "   120&   2.24&0.249&0.065&VLA      \\\\\n",
+      "   120&   2.76&0.345&0.053&VLA      \\\\\n",
+      "   120&   3.18&0.255&0.049&VLA      \\\\\n",
+      "   120&   3.69&0.419&0.043&VLA      \\\\\n",
+      "   120&   4.74&0.698&0.046&VLA      \\\\\n",
+      "   120&   5.76&0.829&0.053&VLA      \\\\\n",
+      "   120&   6.69&0.987&0.058&VLA      \\\\\n",
+      "   120&   7.71&1.117&0.063&VLA      \\\\\n",
+      "   120&   8.49&1.194&0.067&VLA      \\\\\n",
+      "   120&   9.51&1.238&0.069&VLA      \\\\\n",
+      "   120&  10.14&1.310&0.073&VLA      \\\\\n",
+      "   120&  11.16&1.356&0.075&VLA      \\\\\n",
+      "   119&  15.50&0.978&0.075&AMI      \\\\\n",
+      "\\hline\n",
+      "   179&   1.40&0.152&0.019&MeerKAT  \\\\\n",
+      "   178&   2.24&0.351&0.055&VLA      \\\\\n",
+      "   178&   2.75&0.744&0.054&VLA      \\\\\n",
+      "   178&   3.24&0.920&0.057&VLA      \\\\\n",
+      "   178&   3.76&1.032&0.063&VLA      \\\\\n",
+      "   178&   4.74&1.349&0.073&VLA      \\\\\n",
+      "   178&   5.76&1.379&0.075&VLA      \\\\\n",
+      "   178&   6.69&1.285&0.071&VLA      \\\\\n",
+      "   178&   7.71&1.111&0.062&VLA      \\\\\n",
+      "   178&   8.49&1.074&0.062&VLA      \\\\\n",
+      "   178&   9.51&0.921&0.054&VLA      \\\\\n",
+      "   178&  10.14&0.884&0.053&VLA      \\\\\n",
+      "   178&  11.16&0.785&0.049&VLA      \\\\\n",
+      "   179&  15.50&0.676&0.055&AMI      \\\\\n",
+      "\\hline\n",
+      "   235&   1.40&0.178&0.032&MeerKAT  \\\\\n",
+      "   236&  15.50&0.503&0.047&AMI      \\\\\n",
+      "\\hline\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "dd = {}\n",
+    "# epsion_B = 0.001\n",
+    "# epsion_e = 0.1\n",
+    "# eta = epsion_B/epsion_e / (6/11)\n",
+    "\n",
+    "# Eeq_corr = (11/17)*eta**(-6/17) + (6/17) *eta**(11/17)\n",
+    "# Req_corr = eta**(1/17)\n",
+    "# print (Req_corr, Eeq_corr)\n",
+    "\n",
+    "# new: just the radio data\n",
+    "print ('\\n')\n",
+    "\n",
+    "data_rec = radio_rec\n",
+    "data_rec = data_rec[data_rec['inst']!='eMERLIN']\n",
+    "\n",
+    "mjd0 = bran_disc.mjd\n",
+    "mjds = np.array([58625, 58653, 58703, 58761, 58819])\n",
+    "\n",
+    "for i, mjd in enumerate(mjds): \n",
+    "    \n",
+    "    it = abs(data_rec['mjd']-mjd)<14\n",
+    "    ii = it * (data_rec['eflux_mJy']>0)\n",
+    "\n",
+    "    epoch_data  = data_rec[ii]\n",
+    "    for j in np.argsort(epoch_data ['nu_GHz']):\n",
+    "        print ('{0:6.0f}&{1:7.2f}&{2:5.3f}&{3:5.3f}&{4:9}\\\\\\\\'.format(epoch_data[j]['mjd']-mjd0, epoch_data[j]['nu_GHz'], epoch_data[j]['flux_mJy'], epoch_data[j]['eflux_mJy'], epoch_data[j]['inst']))\n",
+    "    print ('''\\hline''')\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  42 & $ 0.41\\pm0.04$ & $ 14.7\\pm1.2$ \\\\ \n",
+      "  70 & $ 0.71\\pm0.04$ & $ 11.9\\pm0.5$ \\\\ \n",
+      " 120 & $ 1.19\\pm0.04$ & $  9.3\\pm0.3$ \\\\ \n",
+      " 178 & $ 1.25\\pm0.04$ & $  5.4\\pm0.1$ \\\\ \n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# read fit results\n",
+    "for eps_str in ['Eqp','nonEqp']:\n",
+    "    dd[eps_str] = astropy.io.ascii.read(os.path.join(data_dir, 'at2019dsg_mcmc_time_{0}.dat'.format(eps_str)), format='fixed_width')\n",
+    "\n",
+    "# print table 1:\n",
+    "for i, d1 in enumerate(dd['Eqp']):\n",
+    "    d01=dd['nonEqp'][i]\n",
+    "    ss = '{0:4} & ${1:5.2f}\\pm{2:0.2f}$ & '.format((int(d1['time'])),10**d1['F_p'], np.log(10)*d1['eF_p']*10**d1['F_p'] )\n",
+    "    ss += '${0:5.1f}\\pm{1:0.1f}$ \\\\\\\\ '.format(10**d1['nu_p']/1e9, np.log(10)*d1['enu_p']*10**d1['nu_p']/1e9 )\n",
+    "    print (ss)\n",
+    "print ('\\n\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "&  42& $16.28(0.03)$ & $48.0(0.1)$ &$-0.25(0.05)$ & $3.5(0.1)$ &$16.18(0.02)$ & $49.4(0.1)$ & $-0.67(0.05)$ & $4.4(0.1)$ \\\\\n",
+      "&  70& $16.48(0.02)$ & $48.3(0.1)$ &$-0.37(0.04)$ & $3.3(0.1)$ &$16.37(0.02)$ & $49.7(0.1)$ & $-0.79(0.04)$ & $4.1(0.1)$ \\\\\n",
+      "& 120& $16.68(0.02)$ & $48.7(0.1)$ &$-0.48(0.04)$ & $3.1(0.1)$ &$16.58(0.02)$ & $50.1(0.1)$ & $-0.91(0.04)$ & $3.9(0.1)$ \\\\\n",
+      "& 178& $16.93(0.02)$ & $49.0(0.1)$ &$-0.72(0.04)$ & $2.6(0.1)$ &$16.82(0.02)$ & $50.3(0.1)$ & $-1.16(0.04)$ & $3.4(0.1)$ \\\\\n",
+      "\n",
+      "&  42& $15.91(0.03)$ & $47.4(0.1)$ &$0.01(0.05)$ & $4.0(0.1)$ &$15.81(0.02)$ & $48.8(0.1)$ & $-0.41(0.04)$ & $4.9(0.1)$ \\\\\n",
+      "&  70& $16.11(0.02)$ & $47.8(0.1)$ &$-0.10(0.04)$ & $3.8(0.1)$ &$16.00(0.02)$ & $49.2(0.1)$ & $-0.52(0.04)$ & $4.7(0.1)$ \\\\\n",
+      "& 120& $16.31(0.02)$ & $48.2(0.1)$ &$-0.22(0.04)$ & $3.6(0.1)$ &$16.21(0.01)$ & $49.5(0.1)$ & $-0.65(0.04)$ & $4.4(0.1)$ \\\\\n",
+      "& 178& $16.56(0.02)$ & $48.4(0.1)$ &$-0.46(0.04)$ & $3.1(0.1)$ &$16.45(0.02)$ & $49.8(0.1)$ & $-0.89(0.04)$ & $3.9(0.1)$ \\\\\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# print table 2:\n",
+    "for geo in ['cone', 'sphere']:\n",
+    "    print ('')\n",
+    "    for i, d1 in enumerate(dd['Eqp']):\n",
+    "        d01=dd['nonEqp'][i]\n",
+    "        ss = '&{0:4}& '.format((int(d1['time'])))\n",
+    "        ss += '${0:0.2f}({1:0.2f})$ & '.format(d1['R_'+geo], d1['eR_'+geo])\n",
+    "        ss += '${0:0.1f}({1:0.1f})$ &'.format(d1['E_'+geo], d1['eE_'+geo])\n",
+    "        ss += '${0:0.2f}({1:0.2f})$ & '.format(d1['B_'+geo], d1['eB_'+geo])\n",
+    "        ss += '${0:0.1f}({1:0.1f})$ &'.format(d1['n_electr_'+geo], d1['en_electr_'+geo])\n",
+    "        ss += '${0:0.2f}({1:0.2f})$ & '.format(d01['R_'+geo], d01['eR_'+geo])\n",
+    "        ss += '${0:0.1f}({1:0.1f})$ & '.format(d01['E_'+geo], d01['eE_'+geo])\n",
+    "        ss += '${0:0.2f}({1:0.2f})$ & '.format(d01['B_'+geo], d01['eB_'+geo])\n",
+    "        ss += '${0:0.1f}({1:0.1f})$ \\\\\\\\'.format(d01['n_electr_'+geo], d01['en_electr_'+geo])\n",
+    "\n",
+    "        print (ss)\n"
+   ]
   }
  ],
  "metadata": {
